load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cas_client_lib",
    srcs = ["cas_client.go"],
    importpath = "github.com/expbuild/expbuild/cmd/cas_client",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/proto/gen/remote_execution",
        "//pkg/util/log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "cas_client",
    embed = [":cas_client_lib"],
    visibility = ["//visibility:public"],
)
