load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "exe_server_lib",
    srcs = ["exe_server.go"],
    importpath = "github.com/expbuild/expbuild/cmd/exe_server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ac",
        "//pkg/exe",
        "//pkg/cas",
        "//pkg/cas/store",
        "//pkg/proto/gen/bytestream",
        "//pkg/proto/gen/remote_execution",
        "//pkg/util/log",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "exe_server",
    embed = [":exe_server_lib"],
    visibility = ["//visibility:public"],
)
