load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "exe",
    srcs = [
        "scheduler.go",
        "service.go",
    ],
    importpath = "github.com/expbuild/expbuild/pkg/exe",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/gen/remote_execution",
        "//pkg/util/log",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
