load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = ["redis.go"],
    importpath = "github.com/expbuild/expbuild/pkg/cas/store",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/gen/remote_execution",
        "//pkg/util/log",
        "@com_github_go_redis_redis_v8//:redis",
    ],
)

go_test(
    name = "store_test",
    srcs = ["redis_test.go"],
    deps = [
        ":store",
        "//pkg/proto/gen/remote_execution",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_stretchr_testify//assert",
    ],
)
